--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,16 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,700,900');
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Roboto:700');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display');
 
 * {
     box-sizing: border-box;
-    animation-timing-function: cubic-bezier(0,0,0,1); animation-fill-mode: forwards;
-    transition: all 2s ease;
+    transition: opacity 1s linear;
+    scroll-behavior: smooth;
 }
 
 body {
-    font-family: "Roboto", sans-serif;
+    font-family: "Roboto", serif;
     color: #333;
     background-color: #fff;
     margin: 0;
@@ -18,22 +21,41 @@ body {
 }
 
 .container {
-    margin: 0;
-    width: 1180px;
+    width: 1132px;
     margin: 0 auto;
     position: relative;
 }
 
 .social {
-    text-align: center;
+    text-align: left;
 }
 
 .entry {
     margin-top: 20em;
 }
 
+.hello {
+    margin: 0;
+}
+
+.landing {
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    z-index: -30;
+    background-position-y: 100%;
+    background-repeat: repeat-x;
+    /*background-image: url(../assets/images/footer.png);*/
+    background-size: 50% auto;
+    box-shadow: 0 0 50px #33333344;
+}
+
+section {
+    margin: 20em 0 0 0;
+}
+
 section div {
-    margin: 0 0 2.5em 0;
+    margin: 0 0 2em 0;
 }
 
 .appearScroll{
@@ -44,6 +66,11 @@ section div {
 h1 {
     font-size: 2.5em;
     font-weight: 700;
+    margin: 0 0 2em 0;
+}
+
+.title {
+    margin: 0;
 }
 
 h2 {
@@ -52,13 +79,38 @@ h2 {
 }
 
 p {
-    font-size: 1.3em;
-    line-height: 1.6em;
+    font-size: 1.1em;
+    line-height: 1.4em;
+    color: #555;
+}
+
+.intro {
+    font-size: 1.5em;
+    line-height: 1.7em;
+    color: #333;
+    padding-right: 50%;
 }
 
 a {
     text-decoration: none;
     color: #333;
+}
+
+.tags {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.tags li {
+    line-height: 2.4em;
+    display: inline;
+    background-color: #333;
+    color: #fff;
+    border-radius: 4px;
+    padding: 0.3em 1em 0.3em 1em;
+    margin: 0 0.2em 0 0;
+    font-weight: 700;
 }
 
 .hello {
@@ -69,6 +121,7 @@ a {
 }
 
 .button {
+    font-size: 1.1em;
     color: #fff;
     background-color: #333;
     padding: 0.8em 4em 0.8em 4em;
@@ -77,41 +130,77 @@ a {
     cursor: pointer;
     font-weight: 700;
     text-align: center;
-    transition: all 0.3s;
-    transition:opacity 3s;
+    transition: all 0.3s linear;
+    transition: opacity 1s linear;
 }
 
 .button:hover {
     background-color: #555;
+    transition: all 0.3s linear;
+}
+
+.hero-container {
+    z-index: 2;
+    position: absolute;
+    display: table-cell;
+    vertical-align: middle;
+    margin: 0 auto;
+    padding: 0;
+    width: 100%;
+    z-index: -10;
+}
+
+.hero {
+    border-radius: 4px;
+    box-shadow: 0 45px 80px -30px rgba(0,0,0,0.50);
+    z-index: 30;
+    width: 35%;
+    opacity: 1;
+    margin: 0;
+    padding: 0;
+    float: right;
+    animation: animate 3s; 
+    animation-iteration-count: infinite; 
+}
+
+@keyframes animate {
+    /*100% { opacity:1;}*/
 }
 
 .social img {
     height: 1.7em;
     margin: 10px;
     filter: invert(10%);
-    transition: all 0.3s;
-    transition:opacity 3s;
+    transition: all 0.3s linear;
+    transition:opacity 1s;
 }
 
 .social img:hover {
+    transition: all 0.3s linear;
     filter: invert(30%);
 }
 
 footer {
-    font-size: 1.1em;
     margin: 20em 0 0 0;
-    padding: 5em 0 5em 0;
-    left: 0;
-    background-color: #333;
+    padding: 0;
+}
+
+footer .bottom-row {
+    background-color: #FFE6EF;
+    padding: 1em;
+    margin: 0;
+    text-align: center;
 }
 
 footer p {
-    color: #fff;
+    color: #333;
     font-size: 0.8em;
+    margin: 0;
+    padding: 0;
 }
 
 footer a {
-    color: #fff;
+    color: #333;
 }
 
 .grid {
@@ -128,8 +217,26 @@ footer a {
     grid-row: 1 | 2;
     height: 200px;
     display: inline-block;
-    box-sizing:border-box;
-    spacing:0;
+    box-sizing: border-box;
+    spacing: 0;
+  }
+
+  .grid-thirds {
+    display: grid;
+    grid-template-columns: 364px 364px 364px;
+    grid-template-rows: 273px;
+    grid-gap: 20px;
+    margin-top:20px;
+  }
+  
+  .grid-thirds img {
+    border-radius: 4px;
+    grid-column: 3 | 1;
+    grid-row: 1 | 1;
+    height: 273px;
+    display: inline-block;
+    box-sizing: border-box;
+    spacing: 0;
   }
   
   .grid img:first-of-type {
@@ -137,17 +244,408 @@ footer a {
     height: 420px;
   }
 
+footer .container {
+    width: 100%;
+    z-index: 1;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2em;
+    background-image: url(../assets/images/footer.png);
+    background-color: #FFE6EF;
+    background-repeat: repeat-x;
+    background-size: auto 100%;
+    height: 500px;
+    background-position-x: 50%;
+  }
+  
+  .bird {
+    background-image: url(../assets/images/bird.svg);
+    background-size: auto 100%;
+    width: 88px;
+    height: 125px;
+    will-change: background-position;
+    -webkit-animation-name: fly-cycle;
+            animation-name: fly-cycle;
+    -webkit-animation-timing-function: steps(10);
+            animation-timing-function: steps(10);
+    -webkit-animation-iteration-count: infinite;
+            animation-iteration-count: infinite;
+  }
+  .bird--one {
+    -webkit-animation-duration: 1s;
+            animation-duration: 1s;
+    -webkit-animation-delay: -0.5s;
+            animation-delay: -0.5s;
+  }
+  .bird--two {
+    -webkit-animation-duration: 0.9s;
+            animation-duration: 0.9s;
+    -webkit-animation-delay: -0.75s;
+            animation-delay: -0.75s;
+  }
+  .bird--three {
+    -webkit-animation-duration: 1.25s;
+            animation-duration: 1.25s;
+    -webkit-animation-delay: -0.25s;
+            animation-delay: -0.25s;
+  }
+  .bird--four {
+    -webkit-animation-duration: 1.1s;
+            animation-duration: 1.1s;
+    -webkit-animation-delay: -0.5s;
+            animation-delay: -0.5s;
+  }
+  
+  .bird-container {
+    position: absolute;
+    top: 20%;
+    left: -10%;
+    -webkit-transform: scale(0) translateX(-10vw);
+            transform: scale(0) translateX(-10vw);
+    will-change: transform;
+    -webkit-animation-name: fly-right-one;
+            animation-name: fly-right-one;
+    -webkit-animation-timing-function: linear;
+            animation-timing-function: linear;
+    -webkit-animation-iteration-count: infinite;
+            animation-iteration-count: infinite;
+  }
+  .bird-container--one {
+    -webkit-animation-duration: 15s;
+            animation-duration: 15s;
+    -webkit-animation-delay: 0;
+            animation-delay: 0;
+  }
+  .bird-container--two {
+    -webkit-animation-duration: 16s;
+            animation-duration: 16s;
+    -webkit-animation-delay: 1s;
+            animation-delay: 1s;
+  }
+  .bird-container--three {
+    -webkit-animation-duration: 14.6s;
+            animation-duration: 14.6s;
+    -webkit-animation-delay: 9.5s;
+            animation-delay: 9.5s;
+  }
+  .bird-container--four {
+    -webkit-animation-duration: 16s;
+            animation-duration: 16s;
+    -webkit-animation-delay: 10.25s;
+            animation-delay: 10.25s;
+  }
+  
+  @-webkit-keyframes fly-cycle {
+    100% {
+      background-position: -900px 0;
+    }
+  }
+  
+  @keyframes fly-cycle {
+    100% {
+      background-position: -900px 0;
+    }
+  }
+  @-webkit-keyframes fly-right-one {
+    0% {
+      -webkit-transform: scale(0.3) translateX(-10vw);
+              transform: scale(0.3) translateX(-10vw);
+    }
+    10% {
+      -webkit-transform: translateY(2vh) translateX(10vw) scale(0.4);
+              transform: translateY(2vh) translateX(10vw) scale(0.4);
+    }
+    20% {
+      -webkit-transform: translateY(0vh) translateX(30vw) scale(0.5);
+              transform: translateY(0vh) translateX(30vw) scale(0.5);
+    }
+    30% {
+      -webkit-transform: translateY(4vh) translateX(50vw) scale(0.6);
+              transform: translateY(4vh) translateX(50vw) scale(0.6);
+    }
+    40% {
+      -webkit-transform: translateY(2vh) translateX(70vw) scale(0.6);
+              transform: translateY(2vh) translateX(70vw) scale(0.6);
+    }
+    50% {
+      -webkit-transform: translateY(0vh) translateX(90vw) scale(0.6);
+              transform: translateY(0vh) translateX(90vw) scale(0.6);
+    }
+    60% {
+      -webkit-transform: translateY(0vh) translateX(110vw) scale(0.6);
+              transform: translateY(0vh) translateX(110vw) scale(0.6);
+    }
+    100% {
+      -webkit-transform: translateY(0vh) translateX(110vw) scale(0.6);
+              transform: translateY(0vh) translateX(110vw) scale(0.6);
+    }
+  }
+  @keyframes fly-right-one {
+    0% {
+      -webkit-transform: scale(0.3) translateX(-10vw);
+              transform: scale(0.3) translateX(-10vw);
+    }
+    10% {
+      -webkit-transform: translateY(2vh) translateX(10vw) scale(0.4);
+              transform: translateY(2vh) translateX(10vw) scale(0.4);
+    }
+    20% {
+      -webkit-transform: translateY(0vh) translateX(30vw) scale(0.5);
+              transform: translateY(0vh) translateX(30vw) scale(0.5);
+    }
+    30% {
+      -webkit-transform: translateY(4vh) translateX(50vw) scale(0.6);
+              transform: translateY(4vh) translateX(50vw) scale(0.6);
+    }
+    40% {
+      -webkit-transform: translateY(2vh) translateX(70vw) scale(0.6);
+              transform: translateY(2vh) translateX(70vw) scale(0.6);
+    }
+    50% {
+      -webkit-transform: translateY(0vh) translateX(90vw) scale(0.6);
+              transform: translateY(0vh) translateX(90vw) scale(0.6);
+    }
+    60% {
+      -webkit-transform: translateY(0vh) translateX(110vw) scale(0.6);
+              transform: translateY(0vh) translateX(110vw) scale(0.6);
+    }
+    100% {
+      -webkit-transform: translateY(0vh) translateX(110vw) scale(0.6);
+              transform: translateY(0vh) translateX(110vw) scale(0.6);
+    }
+  }
+  @-webkit-keyframes fly-right-two {
+    0% {
+      -webkit-transform: translateY(-2vh) translateX(-10vw) scale(0.5);
+              transform: translateY(-2vh) translateX(-10vw) scale(0.5);
+    }
+    10% {
+      -webkit-transform: translateY(0vh) translateX(10vw) scale(0.4);
+              transform: translateY(0vh) translateX(10vw) scale(0.4);
+    }
+    20% {
+      -webkit-transform: translateY(-4vh) translateX(30vw) scale(0.6);
+              transform: translateY(-4vh) translateX(30vw) scale(0.6);
+    }
+    30% {
+      -webkit-transform: translateY(1vh) translateX(50vw) scale(0.45);
+              transform: translateY(1vh) translateX(50vw) scale(0.45);
+    }
+    40% {
+      -webkit-transform: translateY(-2.5vh) translateX(70vw) scale(0.5);
+              transform: translateY(-2.5vh) translateX(70vw) scale(0.5);
+    }
+    50% {
+      -webkit-transform: translateY(0vh) translateX(90vw) scale(0.45);
+              transform: translateY(0vh) translateX(90vw) scale(0.45);
+    }
+    51% {
+      -webkit-transform: translateY(0vh) translateX(110vw) scale(0.45);
+              transform: translateY(0vh) translateX(110vw) scale(0.45);
+    }
+    100% {
+      -webkit-transform: translateY(0vh) translateX(110vw) scale(0.45);
+              transform: translateY(0vh) translateX(110vw) scale(0.45);
+    }
+  }
+  @keyframes fly-right-two {
+    0% {
+      -webkit-transform: translateY(-2vh) translateX(-10vw) scale(0.5);
+              transform: translateY(-2vh) translateX(-10vw) scale(0.5);
+    }
+    10% {
+      -webkit-transform: translateY(0vh) translateX(10vw) scale(0.4);
+              transform: translateY(0vh) translateX(10vw) scale(0.4);
+    }
+    20% {
+      -webkit-transform: translateY(-4vh) translateX(30vw) scale(0.6);
+              transform: translateY(-4vh) translateX(30vw) scale(0.6);
+    }
+    30% {
+      -webkit-transform: translateY(1vh) translateX(50vw) scale(0.45);
+              transform: translateY(1vh) translateX(50vw) scale(0.45);
+    }
+    40% {
+      -webkit-transform: translateY(-2.5vh) translateX(70vw) scale(0.5);
+              transform: translateY(-2.5vh) translateX(70vw) scale(0.5);
+    }
+    50% {
+      -webkit-transform: translateY(0vh) translateX(90vw) scale(0.45);
+              transform: translateY(0vh) translateX(90vw) scale(0.45);
+    }
+    51% {
+      -webkit-transform: translateY(0vh) translateX(110vw) scale(0.45);
+              transform: translateY(0vh) translateX(110vw) scale(0.45);
+    }
+    100% {
+      -webkit-transform: translateY(0vh) translateX(110vw) scale(0.45);
+              transform: translateY(0vh) translateX(110vw) scale(0.45);
+    }
+  }
+
+  .arrow-down-container {
+      position: absolute;
+      top: 88%;
+      left: 47%;
+      height: 60px;
+      width: 60px;
+      text-align: center; 
+      border-radius: 50%;
+      z-index: 100;
+      background-color: #333;
+      box-shadow: 0 10px 50px #33333388;
+  }
+
+  .arrow-pulse {
+    position: absolute;
+    top: 88%;
+    left: 47%;
+    height: 60px;
+    width: 60px;
+    text-align: center; 
+    border-radius: 50%;
+    z-index: 100;
+}
+
+  .arrow-down {
+    border: solid #fff;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    padding: 3px;
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    z-index: 100;
+    animation: pulse 1s; 
+    animation-iteration-count: infinite;
+}
+
+.arrow-down-container:hover {
+    background-color: #FFE6EF;
+    cursor: pointer;
+}
+
+.arrow-down-container:hover .arrow-down {
+    height: 22px;
+    width: 22px;
+    animation: none;
+}
+
+@keyframes pulse {
+    50%  {
+        height: 20px;
+        width: 20px;
+    }
+
+    100% {
+        height: 22px;
+        width: 22px;
+    }
+}
 
 @media screen and (max-width: 1280px) {
     .container {
         width: 560px;
     }
+
+    .intro {
+        padding-right: 0;
+    }
+
+    .grid-thirds {
+        display:grid;
+        grid-template-columns: 560px;
+        grid-template-rows: 420px 420px 420px;
+        grid-gap: 20px;
+        margin-top: 20px;
+      }
+
+    .grid-thirds img {
+        grid-row: 1 / 3;
+        height: 420px;
+        grid-row: auto;
+      }
+
     .grid {
         grid-template-columns: 270px 270px;
         grid-template-rows: 420px 210px 210px;
-      }
-      .grid img:first-of-type {
+    }
+    .grid img:first-of-type {
         grid-column: 1 / 3;
         grid-row: auto;
+    }
+
+    .hero {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 585px) {
+
+    section {
+        margin: 7em 0 0 0;
+    }
+
+    section div {
+        margin: 0;
+    }
+
+    h1 {
+        font-size: 1.6em;
+    }
+
+    h2 { 
+        font-size: 1.3em;
+    }
+
+    p {
+        font-size: 0.9em;
+    }
+
+    .intro {
+        font-size: 0.9em;
+    } 
+    
+    .button {
+        font-size: 0.8em;
+    }
+
+    .container {
+        width: 90vw;
+    }
+
+    .intro {
+        padding-right: 0;
+    }
+
+    .grid-thirds img {
+        grid-row: 1 / 3;
+        height: 50px;
+        grid-row: auto;
       }
+
+    .grid, .grid-thirds {
+        display: block;
+    }
+
+    .grid img, .grid-thirds img {
+        width: 100%;
+        height: auto;
+        margin-bottom: 10px;
+    }
+
+    .grid img:first-of-type {
+        height: auto;
+    }
+
+    .hero {
+        display: none;
+    }
+
+    footer {
+        margin: 7em 0 0 0;
+    }
 }
