--- a/src/style.css
+++ b/src/style.css
@@ -45,9 +45,66 @@ body {
     z-index: -30;
     background-position-y: 100%;
     background-repeat: repeat-x;
+    background-color: #fff;
     /*background-image: url(../assets/images/footer.png);*/
     background-size: 50% auto;
     box-shadow: 0 0 50px #33333344;
+}
+
+.lightbox {
+    visibility: hidden;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    z-index: 300;
+    background-color: #000000ee;
+    background-repeat: no-repeat;
+    background-size: auto 80%;
+    background-position: center;
+    opacity: 0;
+    transition:opacity 0.3s linear;
+}
+
+.lightbox-container {
+    
+}
+
+.lightbox-img {
+    max-width: 100%;
+    height: auto;      
+    box-shadow: 0 0 150px #000000ff;
+    display: table;
+    margin: 10vh auto;
+    position: relative;
+}
+
+.lightbox-close {
+    position: absolute;
+    border-radius: 50%;
+    right: 15vw;
+    top: 3vw;
+    z-index: 330;
+}
+
+.lightbox-close img {
+    width: 15px;
+    margin-right: 5px;
+    margin-bottom: -2px;
+    display: inline-block;
+}
+
+.lightbox p {
+    color: #fff;
+    display: inline-block;
+}
+
+.lightbox-close:hover, .lightbox-close:focus, .lightbox-close:active {
+    cursor: pointer;
+}
+
+.show {
+    visibility: visible;
+    opacity: 1;
 }
 
 section {
@@ -117,6 +174,7 @@ a {
     height: 100vh;
     display: table-cell;
     vertical-align: middle;
+    padding: 35vh 0 0 0;
     margin: 0 auto;
 }
 
@@ -161,6 +219,7 @@ a {
     float: right;
     animation: animate 3s; 
     animation-iteration-count: infinite; 
+    border-radius: 50%;
 }
 
 @keyframes animate {
@@ -186,7 +245,7 @@ footer {
 }
 
 footer .bottom-row {
-    background-color: #FFE6EF;
+    background-color: #fff;
     padding: 1em;
     margin: 0;
     text-align: center;
@@ -212,6 +271,7 @@ footer a {
   }
   
   .grid img {
+    cursor: pointer;
     border-radius: 4px;
     grid-column: 2 | 3;
     grid-row: 1 | 2;
@@ -230,6 +290,7 @@ footer a {
   }
   
   .grid-thirds img {
+    cursor: pointer;
     border-radius: 4px;
     grid-column: 3 | 1;
     grid-row: 1 | 1;
@@ -244,7 +305,13 @@ footer a {
     height: 420px;
   }
 
-footer .container {
+.header-container {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    transform: translateZ(-1px);
     width: 100%;
     z-index: 1;
     overflow: hidden;
@@ -256,8 +323,29 @@ footer .container {
     background-color: #FFE6EF;
     background-repeat: repeat-x;
     background-size: auto 100%;
-    height: 500px;
+    height: 40vh;
     background-position-x: 50%;
+  }
+
+  .footer-container {
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    transform: translateZ(-1px);
+    width: 100%;
+    z-index: 1;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2em;
+    background-image: url(../assets/images/header.png);
+    background-repeat: repeat-x;
+    background-size: auto 100%;
+    height: 40vh;
+    background-position: 50% 4px;
+    background-color: #E5F1E9;
   }
   
   .bird {
@@ -524,7 +612,7 @@ footer .container {
 }
 
 .arrow-down-container:hover {
-    background-color: #FFE6EF;
+    background-color: #555;
     cursor: pointer;
 }
 
