--- a/src/style.css
+++ b/src/style.css
@@ -138,13 +138,17 @@ h2 {
 p {
     font-size: 1.1em;
     line-height: 1.4em;
-    color: #555;
+    color: #7a7a7a;
+}
+
+b {
+    color: #333;
 }
 
 .intro {
     font-size: 1.5em;
     line-height: 1.7em;
-    color: #333;
+    color: #7a7a7a;
     padding-right: 50%;
 }
 
@@ -210,20 +214,15 @@ a {
 
 .hero {
     border-radius: 4px;
-    box-shadow: 0 45px 80px -30px rgba(0,0,0,0.50);
+    /*box-shadow: 0 45px 80px -30px rgba(0,0,0,0.50);*/
+    filter: drop-shadow(0 80px 40px #33333377);
     z-index: 30;
     width: 35%;
     opacity: 1;
     margin: 0;
     padding: 0;
     float: right;
-    animation: animate 3s; 
-    animation-iteration-count: infinite; 
     border-radius: 50%;
-}
-
-@keyframes animate {
-    /*100% { opacity:1;}*/
 }
 
 .social img {
@@ -343,8 +342,8 @@ footer a {
     background-image: url(../assets/images/header.png);
     background-repeat: repeat-x;
     background-size: auto 100%;
-    height: 40vh;
-    background-position: 50% 4px;
+    height: 35vh;
+    background-position: 0 4px;
     background-color: #E5F1E9;
   }
   
