--- a/src/style.css
+++ b/src/style.css
@@ -45,7 +45,7 @@ body {
     z-index: -30;
     background-position-y: 100%;
     background-repeat: repeat-x;
-    background-color: #fff;
+    background-color: #FFE6EF;
     /*background-image: url(../assets/images/footer.png);*/
     background-size: 50% auto;
     box-shadow: 0 0 50px #33333344;
@@ -113,6 +113,10 @@ section {
 
 section div {
     margin: 0 0 2em 0;
+}
+
+.impressum {
+    margin: 2em 0 20em 0;
 }
 
 .appearScroll{
@@ -314,7 +318,27 @@ footer a {
     right: 0;
     bottom: 0;
     left: 0;
-    transform: translateZ(-1px);
+    width: 100%;
+    z-index: 1;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2em;
+    background-image: url(../assets/images/footer.png);
+    background-color: #FFE6EF;
+    background-repeat: repeat-x;
+    background-size: auto 100%;
+    height: 40vh;
+    background-position-x: 50%;
+  }
+
+  .header-container-rel {
+    position: relative;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     width: 100%;
     z-index: 1;
     overflow: hidden;
