--- a/src/style.css
+++ b/src/style.css
@@ -120,6 +120,11 @@ section div {
 .social-media {
     background-color: #7314C7;
     padding: 2em;
+    border-radius: 5px;
+}
+
+.social-media p, .social-media h2 {
+    color: #fff;
 }
 
 .appearScroll{
@@ -245,7 +250,6 @@ a {
 .social img {
     height: 3em;
     margin: 5px;
-    filter: invert(10%);
     transition: all 0.3s linear;
     transition:opacity 1s;
 }
@@ -334,12 +338,12 @@ footer a {
     align-items: center;
     justify-content: center;
     padding: 2em;
-    background-image: url(../assets/images/header.png);
-    background-repeat: repeat-x;
-    background-size: auto 100%;
-    height: 35vh;
+    background-image: url(../assets/images/footer.png);
+    background-repeat: none;
+    background-size: 100%;
+    height: 20vh;
     background-position: 0 4px;
-    background-color: #E5F1E9;
+    background-color: #fff;
   }
 
   .arrow-pulse {
