--- a/src/style.css
+++ b/src/style.css
@@ -49,7 +49,7 @@ body {
     background-color: #7314C7;
     /*background-image: url(../assets/images/footer.png);*/
     background-size: 50% auto;
-    /*box-shadow: 0 0 50px #33333344;*/
+    box-shadow: 0 0 50px #33333344;
     /*background-color: #FFE6EF;*/
 }
 
@@ -68,7 +68,8 @@ body {
 }
 
 .lightbox-container {
-    
+    width: 100vw;
+    height: 100vh;
 }
 
 .lightbox-img {
@@ -78,6 +79,7 @@ body {
     display: table;
     margin: 10vh auto;
     position: relative;
+    box-shadow: 0 0px 180px #33FDD999;
 }
 
 .lightbox-close {
@@ -206,7 +208,7 @@ a {
     color: #7314C7;
     background-color: #33FDD9;
     padding: 0.8em 2em 0.8em 2em;
-    box-shadow: 0 0px 50px #33FDD9aa;
+    box-shadow: 0 0px 30px #33FDD977;
     border-radius: 4px;
     cursor: pointer;
     font-weight: 700;
@@ -260,26 +262,26 @@ a {
 }
 
 footer {
-    margin: 20em 0 0 0;
+    margin: 10em 0 0 0;
     padding: 0;
 }
 
 footer .bottom-row {
-    background-color: #fff;
+    background-color: #333;
     padding: 1em;
     margin: 0;
     text-align: center;
 }
 
 footer p {
-    color: #333;
+    color: #fff;
     font-size: 0.8em;
     margin: 0;
     padding: 0;
 }
 
 footer a {
-    color: #333;
+    color: #39DDC0;
 }
 
 .grid {
@@ -323,27 +325,6 @@ footer a {
   .grid img:first-of-type {
     grid-row: 1 / 3;
     height: 420px;
-  }
-
-  .footer-container {
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    transform: translateZ(-1px);
-    width: 100%;
-    z-index: 1;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 2em;
-    background-image: url(../assets/images/footer.png);
-    background-repeat: none;
-    background-size: 100%;
-    height: 20vh;
-    background-position: 0 4px;
-    background-color: #fff;
   }
 
   .arrow-pulse {
