--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 @import url('https://fonts.googleapis.com/css?family=Roboto:700');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
-@import url('https://fonts.googleapis.com/css?family=Playfair+Display');
 
 * {
     box-sizing: border-box;
@@ -218,9 +216,10 @@ a {
 }
 
 .mail-icon {
-    height: 1.2em;
+    height: 1.3em;
     margin: 0 0 0 0;
     padding: 0 0.8em 0 0;
+    vertical-align: bottom;
 }
 
 .button:hover {
