--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 @import url('https://fonts.googleapis.com/css?family=Roboto:700');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display');
 
 * {
     box-sizing: border-box;
@@ -47,7 +49,7 @@ body {
     background-color: #7314C7;
     /*background-image: url(../assets/images/footer.png);*/
     background-size: 50% auto;
-    box-shadow: 0 0 50px #33333344;
+    box-shadow: 0 0 150px #33333377;
     /*background-color: #FFE6EF;*/
 }
 
@@ -66,8 +68,7 @@ body {
 }
 
 .lightbox-container {
-    width: 100vw;
-    height: 100vh;
+    
 }
 
 .lightbox-img {
@@ -77,7 +78,6 @@ body {
     display: table;
     margin: 10vh auto;
     position: relative;
-    box-shadow: 0 0px 180px #33FDD999;
 }
 
 .lightbox-close {
@@ -206,7 +206,7 @@ a {
     color: #7314C7;
     background-color: #33FDD9;
     padding: 0.8em 2em 0.8em 2em;
-    box-shadow: 0 0px 30px #33FDD977;
+    box-shadow: 0 0px 50px #33FDD9aa;
     border-radius: 4px;
     cursor: pointer;
     font-weight: 700;
@@ -216,10 +216,9 @@ a {
 }
 
 .mail-icon {
-    height: 1.3em;
+    height: 1.2em;
     margin: 0 0 0 0;
     padding: 0 0.8em 0 0;
-    vertical-align: bottom;
 }
 
 .button:hover {
@@ -261,26 +260,26 @@ a {
 }
 
 footer {
-    margin: 10em 0 0 0;
+    margin: 20em 0 0 0;
     padding: 0;
 }
 
 footer .bottom-row {
-    background-color: #333;
+    background-color: #fff;
     padding: 1em;
     margin: 0;
     text-align: center;
 }
 
 footer p {
-    color: #fff;
+    color: #333;
     font-size: 0.8em;
     margin: 0;
     padding: 0;
 }
 
 footer a {
-    color: #39DDC0;
+    color: #333;
 }
 
 .grid {
@@ -326,13 +325,36 @@ footer a {
     height: 420px;
   }
 
+  .footer-container {
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    transform: translateZ(-1px);
+    width: 100%;
+    z-index: 1;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2em;
+    background-image: url(../assets/images/footer.png);
+    background-repeat: none;
+    background-size: 100%;
+    height: 20vh;
+    background-position: 0 4px;
+    background-color: #fff;
+  }
+
   .arrow-pulse {
     position: absolute;
     top: 88%;
-    left: 44%;
+    left: 0;
+    right: 0;
     height: 35px;
     width: 200px;
     text-align: center; 
+    margin: 0 auto 0 auto;
     border-radius: 50%;
     z-index: 100;
 }
@@ -399,15 +421,15 @@ footer a {
     }
 
     p {
-        font-size: 0.9em;
+        font-size: 1em;
     }
 
     .intro {
-        font-size: 0.9em;
+        font-size: 1em;
     } 
     
     .button {
-        font-size: 0.8em;
+        font-size: 1em;
     }
 
     .container {
