Footer color fix

--- a/src/style.css
+++ b/src/style.css
@@ -265,7 +265,7 @@ footer {
 }
 
 footer .bottom-row {
-    background-color: #fff;
+    background-color: #333;
     padding: 1em;
     margin: 0;
     text-align: center;
